# docs/swagger.json
@@ -535,7 +535,7 @@
                 "tags": [
                     "orders"
                 ],
-                "summary": "DeleteCart api used to delete cart for specific ip address",
+                "summary": "DeleteCart api used to delete cart for specific device",
                 "parameters": [
                     {
                         "type": "string",
@@ -558,6 +558,56 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/entity.Cart"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/translate.ResultErrors"
+                        }
+                    }
+                }
+            }
+        },
+        "/carts": {
+            "get": {
+                "description": "find carts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "GetCarts api used to find cart for specific device",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Device ID",
+                        "name": "device_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/translate.ResultSuccess"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/entity.Cart"
+                                            }
                                         }
                                     }
                                 }
@@ -655,6 +705,104 @@
                                     }
                                 ]
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/translate.ResultErrors"
+                        }
+                    }
+                }
+            }
+        },
+        "/invitation": {
+            "post": {
+                "description": "create new invitation",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "AddInvitation api used to create new invitation for talent service",
+                "parameters": [
+                    {
+                        "description": "Invitation",
+                        "name": "talent",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Invitation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/translate.ResultSuccess"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/entity.Invitation"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/translate.ResultErrors"
+                        }
+                    }
+                }
+            }
+        },
+        "/quotation": {
+            "post": {
+                "description": "create new invitation",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "AddQuotation api used to create new invitation for talent service",
+                "parameters": [
+                    {
+                        "description": "Quotation",
+                        "name": "talent",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entity.Quotation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/translate.ResultSuccess"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/entity.Quotation"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -1191,6 +1339,12 @@
                 "device_id": {
                     "type": "string"
                 },
+                "device_name": {
+                    "type": "string"
+                },
+                "device_version": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1262,6 +1416,29 @@
                 }
             }
         },
+        "entity.FilteredTalent": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
+                "expertise_name": {
+                    "type": "string"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "q": {
+                    "type": "string"
+                },
+                "sub_category_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.Image": {
             "type": "object",
             "required": [
@@ -1272,6 +1449,23 @@
                     "type": "integer"
                 },
                 "image_url": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Invitation": {
+            "type": "object",
+            "properties": {
+                "campaign_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "status": {
                     "type": "string"
                 }
             }
@@ -1343,6 +1537,23 @@
                     "type": "string"
                 },
                 "slug": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Quotation": {
+            "type": "object",
+            "properties": {
+                "campaign_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "status": {
                     "type": "string"
                 }
             }
@@ -1570,29 +1781,6 @@
                 },
                 "q": {
                     "type": "string"
-                }
-            }
-        },
-        "repository.FilteredTalent": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "integer"
-                },
-                "expertise_name": {
-                    "type": "string"
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
-                },
-                "q": {
-                    "type": "string"
-                },
-                "sub_category_id": {
-                    "type": "integer"
                 }
             }
         },
